# ERLiveTextDisplay

./: CMakeLists.txt  dllmain.cpp  er.cpp  readme.md
core/: config.cpp  er.cpp  hooks.cpp  outputer.cpp
include/: config.h  er.h  logger.h  mem.h  misc.h  outputer.h
tools/: logger.cpp
